--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
                       
                       <div class="mb-3">
                         <button type="submit" class="btn btn-primary">Login</button>
-                        &nbsp;&nbsp;&nbsp;New User?&nbsp;&nbsp;&nbsp;<a href="#" class="anchor">Register</a>
+                        &nbsp;&nbsp;&nbsp;New User?&nbsp;&nbsp;&nbsp;<a href="register.html" class="anchor">Register</a>
                       </div>
                       
                 </form>
