--- a/register.html
+++ b/register.html
@@ -28,7 +28,7 @@
                       </div>
                       <div class="mb-3">
                         <button type="submit" class="btn btn-primary">Register</button>
-                        &nbsp;&nbsp;&nbsp;Already User?&nbsp;&nbsp;&nbsp;<a href="#" class="anchor">Login</a>
+                        &nbsp;&nbsp;&nbsp;Already User?&nbsp;&nbsp;&nbsp;<a href="login.html" class="anchor">Login</a>
                       </div>
                       
                 </form>
